--- a/package.yml
+++ b/package.yml
@@ -1,10 +1,10 @@
 package: nv_defaultaddons
-version: 1.2.1
-author: 'novinet GmbH & Co. KG'
-supportpage: 'https://github.com/novinet-git/nv_defaultaddons'
+version: 1.3.0
+author: 'Friends Of REDAXO'
+supportpage: 'https://github.com/FriendsOfREDAXO/nv_defaultaddons'
 page:
-    title: nvDefaultAddons
-    icon: novinet-icon-logo
+    title: Default Addons
+    icon: fa-solid fa-arrows-spin
     perm: 'nv_defaultaddons[]'
     pjax: true
     subpages:
@@ -12,5 +12,5 @@ page:
         install: { title: 'translate:install' }
         info: { title: translate:info }
 requires:
-    redaxo: ^5.9.0
+    redaxo: ^5.17.0
 
