--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
-package: nv_defaultaddons
-version: 1.3.0
+package: default_addons
+version: 1.3.1
 author: 'Friends Of REDAXO'
 supportpage: 'https://github.com/FriendsOfREDAXO/nv_defaultaddons'
 page:
