--- a/package.yml
+++ b/package.yml
@@ -1,16 +1,20 @@
 package: default_addons
-version: 1.3.1
-author: 'Friends Of REDAXO'
-supportpage: 'https://github.com/FriendsOfREDAXO/nv_defaultaddons'
-page:
-    title: Default Addons
-    icon: fa-solid fa-arrows-spin
-    perm: 'nv_defaultaddons[]'
-    pjax: true
-    subpages:
-        settings: { title: translate:settings }
-        install: { title: 'translate:install' }
-        info: { title: translate:info }
+version: 2.0.0-dev-2024-12-27
+author: "Friends Of REDAXO"
+supportpage: "https://github.com/FriendsOfREDAXO/default_addons"
+
+pages:
+    install/packages/batch:
+        title: translate:default_addons_title
+        pjax: false
+        icon: rex-icon fa-list-check
+
 requires:
     redaxo: ^5.17.0
 
+conflicts:
+    packages:
+        nvDefaultAddons: '>=0'
+
+default_config:
+    addonlist: "{}"
